--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,3 +1,4 @@
+@import "~sass-rem";
 :host {
   display: block;
 }
@@ -6,8 +7,8 @@
   background: var(--neutral-200);
   color: var(--text);
 
-  border-radius: 4px;
-  border-width: 2px;
+  border-radius: rem(4px);
+  border-width: rem(2px);
   border-style: solid;
   border-color: var(--neutral-600);
 
@@ -32,7 +33,7 @@
 
   &.primary {
     border: none;
-    border-radius: 4px;
+    border-radius: rem(4px);
     background: var(--primary-200);
     color: var(--text-inverted);
     &:hover {
@@ -60,7 +61,7 @@
 
   &.warning {
     border: none;
-    border-radius: 4px;
+    border-radius: rem(4px);
     background: var(--danger-200);
     color: var(--text-inverted);
     &:hover {
