--- a/src/Components/Toast/Toast.scss
+++ b/src/Components/Toast/Toast.scss
@@ -13,7 +13,7 @@
   padding: 1rem;
   .toast {
     position: relative;
-    // top: 4rem;
+    top: 6rem;
 
     display: flex;
     align-items: center;
@@ -26,7 +26,7 @@
     box-shadow: 0px 1px 3px 0px var(--neutral-400);
     background-color: var(--neutral-300);
 
-    transition: 450ms ease-out;
+    transition: 450ms ease-in-out;
 
     &.error {
       background-color: var(--danger-100);
@@ -36,6 +36,9 @@
     &.success {
       background-color: var(--success-100);
       color: var(--text-inverted) !important;
+    }
+    &.visible {
+      top: 0;
     }
   }
 }
