--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -28,7 +28,7 @@
     position: relative;
     top: 90%;
 
-    height: 60%;
+    max-height: 60%;
     width: 40%;
 
     background-color: var(--neutral-200);
@@ -43,8 +43,44 @@
 
     @include media("<=tablet") {
       align-self: flex-end;
-      height: 75%;
+      max-height: 75%;
       width: 100%;
+    }
+
+    display: flex;
+    flex-direction: column;
+
+    .modal-header,
+    .modal-footer {
+      width: 100%;
+      min-height: 4rem;
+      max-height: 4rem;
+      z-index: 2;
+    }
+
+    .modal-header {
+      box-shadow: 0px -1px 3px 1px var(--neutral-500);
+      border-bottom: rem(1px) solid var(--neutral-400);
+    }
+
+    .modal-footer {
+      box-shadow: 0px 1px 3px 1px var(--neutral-500);
+      border-top: rem(1px) solid var(--neutral-400);
+    }
+
+    .modal-section-wrapper {
+      z-index: 1;
+      width: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
+      .modal-section {
+        min-height: 20rem;
+        border-bottom: rem(1px) solid var(--neutral-400);
+        &:last-child {
+          border-bottom: none;
+          background-color: var(--neutral-200);
+        }
+      }
     }
   }
 }
