--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -19,6 +19,9 @@
   &.active {
     background-color: rgba(0, 0, 0, 0.75);
     z-index: 9;
+    .modal {
+      top: 0;
+    }
   }
   &:not(.active) {
     transition: 450ms ease-in;
@@ -37,10 +40,6 @@
 
     transition: 450ms ease-in-out;
 
-    &.active {
-      top: 0;
-    }
-
     @include media("<=tablet") {
       align-self: flex-end;
       max-height: 75%;
@@ -56,11 +55,20 @@
       min-height: 4rem;
       max-height: 4rem;
       z-index: 2;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 1rem;
     }
 
     .modal-header {
       box-shadow: 0px -1px 3px 1px var(--neutral-500);
       border-bottom: rem(1px) solid var(--neutral-400);
+      .modal-header-close {
+        height: 1.5rem;
+        width: 1.5rem;
+        cursor: pointer;
+      }
     }
 
     .modal-footer {
