separated modal section from the modal file

--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -87,7 +87,7 @@
       min-height: 6rem;
       .modal-section {
         min-height: 6rem;
-        padding: 0.25rem 0;
+        padding: 1rem;
         background-color: var(--neutral-200);
         border-bottom: rem(1px) solid var(--neutral-400);
         &:last-child {
