separating the section content to its own wrapper

--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -93,6 +93,9 @@
         &:last-child {
           border-bottom: none;
         }
+        .modal-section-content {
+          padding: 0.25rem 0;
+        }
       }
     }
   }
