--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -20,6 +20,12 @@
     align-items: center;
   }
 
+  .card-footer {
+    .card-footer-wrapper {
+      margin-left: auto;
+    }
+  }
+
   .card-content {
     ol {
       margin: 0;
